--- a/frontend_react/src/components/Navbar/Navbar.scss
+++ b/frontend_react/src/components/Navbar/Navbar.scss
@@ -95,6 +95,10 @@
     width: 70%;
     height: 70%;
     color: var(--white-color);
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 
   div {
