--- a/frontend_react/src/container/Work/Work.scss
+++ b/frontend_react/src/container/Work/Work.scss
@@ -48,6 +48,7 @@
 
   .app__work-item {
     width: 270px;
+    height: 400px;
     flex-direction: column;
 
     margin: 2rem;
@@ -138,6 +139,10 @@
   h4 {
     margin-top: 1rem;
     line-height: 1.5;
+    text-align: center;
+  }
+
+  p {
   }
 
   .app__work-tag {
